@@ -36,7 +36,9 @@ BugFixes:
            and shadow;
  - fight: Fixed a bug that allowed a playable character to walk without on
           its turn;
-
+ - fight: When attacked and without a target enemy, set the current character
+          target as the attacker;
+          
 ================================================
 |                Version 0.8                   |
 |            Released: 2011-12-19              |
